[gd_scene load_steps=11 format=3 uid="uid://clts1kc25eky0"]

[ext_resource type="Script" uid="uid://cgyqpjpq63dlb" path="res://scenes/3d/nightmare_hunter/nightmare_coin_hunter.gd" id="1_8n7ed"]
[ext_resource type="Texture2D" uid="uid://umjm64f76xqr" path="res://scenes/nightmare_coin.png" id="2_kghlc"]
[ext_resource type="AudioStream" uid="uid://djd5ucsxlxigf" path="res://sounds/nightmare_scream.mp3" id="3_kghlc"]
[ext_resource type="AudioStream" uid="uid://dbo6qkomkgfa4" path="res://sounds/nightmare_scream2.mp3" id="3_sifj8"]
[ext_resource type="Texture2D" uid="uid://bfhcgnxutlhs6" path="res://scenes/hand_cover.png" id="3_uynx3"]
[ext_resource type="AudioStream" uid="uid://cr2uyiph8cb5s" path="res://sounds/nightmare_bling.mp3" id="4_hnghh"]
[ext_resource type="AudioStream" uid="uid://tt4qkfvgghqq" path="res://sounds/sound-of-branches-snapping-hd-262341.mp3" id="6_ahjlb"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0gu2t"]
height = 4.9101563

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8n7ed"]
height = 4.987793
radius = 1.8432617

[sub_resource type="CylinderShape3D" id="CylinderShape3D_kghlc"]
height = 4.987793
radius = 2.383789

[node name="NightmareCoin" type="CharacterBody3D" node_paths=PackedStringArray("sounds", "areas")]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_8n7ed")
sounds = [NodePath("Scream"), NodePath("ScreamFake"), NodePath("Scream2")]
areas = [NodePath("KillArea"), NodePath("FlashlightDetect")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9868879, 0)
shape = SubResource("CapsuleShape3D_0gu2t")

[node name="NightmareCoinSprite" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8452101, 0)
billboard = 2
shaded = true
texture = ExtResource("2_kghlc")

[node name="HandCover" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.46727693, 0)
visible = false
modulate = Color(1, 0.766667, 0, 1)
pixel_size = 0.024
billboard = 2
shaded = true
render_priority = 1
texture = ExtResource("3_uynx3")

[node name="KillArea" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="KillArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6931152, 0)
shape = SubResource("CylinderShape3D_8n7ed")

[node name="FlashlightDetect" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="FlashlightDetect"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6931152, 0)
shape = SubResource("CylinderShape3D_kghlc")

[node name="Centerpoint" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2658632, 0)

[node name="ScreamFake" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3013134, 0)
stream = ExtResource("3_sifj8")
volume_db = -20.0
max_distance = 15.0

[node name="Scream" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3013134, 0)
stream = ExtResource("3_kghlc")
max_distance = 5.0
doppler_tracking = 2

[node name="Scream2" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2980733, 0)
stream = ExtResource("3_kghlc")
pitch_scale = 0.87
max_distance = 20.0
doppler_tracking = 2

[node name="Shriek" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3013134, 0)
stream = ExtResource("4_hnghh")
volume_db = 10.0

[node name="Snap" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3013134, 0)
stream = ExtResource("6_ahjlb")
volume_db = -1.0
max_distance = 30.0

[node name="ScreamFake2" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3013134, 0)
stream = ExtResource("3_sifj8")
volume_db = -10.0
pitch_scale = 1.4
max_distance = 30.0
